Add performance/encapsulation PMD rules and fix 109 new violations
Extended pmd-ruleset.xml with:
- ArrayIsStoredDirectly (was excluded): defensive array copies in constructors
- MethodReturnsInternalArray (was excluded): defensive copies on return
- category/java/performance.xml (new): string efficiency rules

Fixes applied (real bugs corrected):
- InefficientEmptyStringCheck (11 files): .trim().isEmpty() → .isBlank()
- AppendCharacterWithChar (17 direct + 48 escape): append("x") → append('x'),
  append("\n") → append('\n'), append("\uXXXX") → append('\uXXXX')
- AddEmptyString (5): x + "" → String.valueOf(x)
- UseStringBufferForStringAppends (3 real fixes): GangAppScreen x2, GangCommand
- ArrayIsStoredDirectly (5 fixes): defensive clone() in GenericQuality Builder,
  InputValidation.Result; 2 suppressed for performance reasons
- MethodReturnsInternalArray (3 fixes): defensive clone() returns in
  ObjectiveType, InputValidation; 9 suppressed for internal/render arrays

PMD violations remain at 0.

https://claude.ai/code/session_01A7NZPBgW986845CnQKxSAJ